# ADOSDroneAgent

./: .env.example  .gitattributes  .gitignore  .gitmodules  =42.0.0  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml
agents/lite-rs/: .gitignore  BENCH-BRINGUP-LUCKFOX.md  CHANGELOG.md  Cargo.toml  HAL-EXTENSION.md  Makefile  README.md  RELEASE.md  manifest.yaml  test_emit_manifest.py
agents/lite-rs/buildroot/: Config.in  DEPRECATED.md  external.desc  external.mk  post-image.sh
agents/lite-rs/imagebuilder/: README.md
agents/lite-rs/tools/: luckfox-mem-profile.sh
crates/: Cargo.toml
crates/ados-atlas/: Cargo.toml
crates/ados-atlas-transport/: Cargo.toml
crates/ados-atlas-transport/src/: bearer.rs  delta.rs  error.rs  ladder.rs  lan_http.rs  lib.rs  loopback.rs  wfb_relay.rs
crates/ados-atlas/src/: config.rs  control.rs  encode.rs  frame_source.rs  lib.rs  pose_source.rs  publish.rs  runtime.rs  selector.rs  service.rs  session.rs  state_sidecar.rs
crates/ados-atlas/tests/: sitl_capture.rs  vision_frame_flow.rs
crates/ados-capabilities-codegen/: Cargo.toml
crates/ados-capabilities-codegen/src/: main.rs
crates/ados-cloud/: Cargo.toml
crates/ados-cloud/src/: atlas_bearer.rs  auto_pair.rs  config.rs  heartbeat.rs  lib.rs  log_push.rs  pairing.rs  tls.rs  vision_bearer.rs
crates/ados-cloud/tests/: heartbeat_golden.rs  offload_link_tier.rs
crates/ados-compute/: Cargo.toml
crates/ados-compute/src/: api.rs  artifacts.rs  auth.rs  backends.rs  client.rs  cluster.rs  engine.rs  gpu.rs  heartbeat_sidecar.rs  ingest.rs  jobs_sidecar.rs  keyframe_persister.rs  lib.rs  mdns.rs  offload.rs  offload_bridge.rs  offload_client.rs  offload_orchestrator.rs  offload_session_manager.rs  offload_stream.rs  offload_ws.rs  pipeline.rs  reconstructor.rs  rerun_log.rs  rerun_world.rs  scheduler.rs  seed.rs  serving_config.rs  session.rs  session_registry.rs  store.rs
crates/ados-compute/tests/: atlas_sitl.rs  offload_live_rtsp.rs  offload_sitl.rs  onnx_offload.rs
crates/ados-config/: Cargo.toml
crates/ados-config-tunnel/: Cargo.toml
crates/ados-config-tunnel/src/: cmdsock.rs  config.rs  config_client.rs  injector.rs  lib.rs  main.rs  message.rs  paths.rs  sidecar.rs  stats.rs  terminator.rs  transport.rs
crates/ados-config/src/: lib.rs
crates/ados-control/: Cargo.toml
crates/ados-control/src/: auth.rs  config.rs  dashboard_pin.rs  hw_local.rs  lib.rs  main.rs  mcp.rs  pairing_store.rs  profile.rs  proxy.rs  proxy_auth.rs  routing.rs  serve.rs  state.rs
crates/ados-control/tests/: parity.rs
crates/ados-crsf/: Cargo.toml
crates/ados-crsf/src/: bank.rs  channels.rs  cmdsock.rs  config.rs  frame.rs  hid.rs  lib.rs  link.rs  main.rs  params.rs  paths.rs  reg.rs  scale.rs  sidecar.rs  sources.rs  telemetry.rs  transport.rs  watchdog.rs
crates/ados-display/: Cargo.toml
crates/ados-display/examples/: render_pages.rs
crates/ados-display/src/: calibration.rs  conf.rs  fb_geometry.rs  fb_writer.rs  lib.rs  oled.rs  pack.rs  probe.rs  render_loop.rs  sidecar.rs  state_source.rs  touch_input.rs
crates/ados-gpio/: Cargo.toml
crates/ados-gpio/src/: lib.rs  linux_output.rs  sidecar.rs
crates/ados-groundlink/: Cargo.toml
crates/ados-groundlink/src/: acquire.rs  atlas_relay.rs  cmdsock.rs  fanout.rs  gs_config.rs  lib.rs  main.rs  mdns.rs  mesh_events.rs  pair_state.rs  paths.rs  presence.rs  process_spawn.rs  receiver.rs  relay.rs  sidecars.rs  watchdog.rs  wfb_rx.rs
crates/ados-groundlink/tests/: run_dir_env.rs
crates/ados-hal-probe/: Cargo.toml
crates/ados-hal-probe/src/: lib.rs  runner.rs
crates/ados-hid/: Cargo.toml
crates/ados-hid/src/: affine.rs  buttons.rs  buttons_ipc.rs  eventbus.rs  hid_cmd.rs  input.rs  lib.rs  paths.rs  pic.rs  pic_ipc.rs  pic_sidecar.rs  sidecar.rs  touch.rs
crates/ados-installer/: Cargo.toml
crates/ados-installer/examples/: ui_demo.rs
crates/ados-installer/src/: binaries.rs  checkpoint.rs  ctx.rs  env.rs  exec.rs  graph.rs  journal.rs  lib.rs  macos.rs  main.rs  net.rs  result.rs  uninstall.rs  verify.rs
crates/ados-logd/: Cargo.toml
crates/ados-logd/src/: daemon.rs  db.rs  ingest.rs  lib.rs  main.rs  retention.rs  writer.rs
crates/ados-logd/tests/: ingestion_integration.rs
crates/ados-macpin/: Cargo.toml
crates/ados-macpin/src/: engine.rs  lib.rs
crates/ados-mavlink-router/: Cargo.toml
crates/ados-mavlink-router/src/: config.rs  connection.rs  demo.rs  lib.rs  main.rs  param_cache.rs  proxies.rs  state.rs
crates/ados-net/: Cargo.toml
crates/ados-net/src/: cmd.rs  cmdsock.rs  config.rs  data_cap.rs  firewall.rs  lib.rs  main.rs  nmcli.rs  paths.rs  process.rs  sidecar.rs  sysfs.rs  throttle.rs
crates/ados-offload/: Cargo.toml
crates/ados-offload/src/: freshness.rs  lib.rs  session.rs  tier.rs
crates/ados-plugin-host/: Cargo.toml
crates/ados-plugin-host/src/: archive.rs  control.rs  dispatch.rs  errors.rs  handlers.rs  host.rs  invoke.rs  lib.rs  manifest.rs  mavlink_client.rs  realhost.rs  server.rs  signing.rs  state.rs  state_sidecar.rs  supervisor.rs  systemd.rs  token_secret.rs  vision_client.rs
crates/ados-plugin-host/tests/: interop.rs  real_host_round_trip.rs  round_trip.rs  supervisor_contract.rs  vision_bridge.rs
crates/ados-protocol/: Cargo.toml  capabilities.toml  contracts.toml  wfb-adapters.toml
crates/ados-protocol/src/: atlas.rs  capabilities.rs  compute.rs  contracts.rs  crypto.rs  dashboard_session.rs  dispatch.rs  frame.rs  framebus.rs  hwcaps.rs  ipc.rs  lib.rs  logd.rs  mavlink.rs  mcp_token.rs  offload.rs  offload_link.rs  pairing_posture.rs  plugin.rs  rest.rs  sidecar.rs  state.rs  tap.rs  tunnel_config.rs  wfb_tables.rs  ws_ticket.rs
crates/ados-protocol/tests/: capabilities.rs  python_interop.rs
crates/ados-radio/: Cargo.toml
crates/ados-radio/src/: adapter.rs  aux_cmd.rs  bitrate.rs  bringup.rs  channel.rs  cmdsock.rs  config.rs  hop.rs  hop_supervisor.rs  (+15 more)
crates/ados-sdk/: Cargo.toml
crates/ados-supervisor/: Cargo.toml
crates/ados-tui/: Cargo.toml
crates/ados-video/: Cargo.toml
crates/ados-vision/: Cargo.toml
(+2319 files in other folders)
