[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ados-drone-agent"
# Version is read from src/ados/__init__.py via attr lookup so pip
# metadata and `ados version` always agree.
dynamic = ["version"]
description = "ADOS Drone Agent — Software-defined drone network agent"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Altnautica", email = "team@altnautica.com" }
]
keywords = ["drone", "mavlink", "ardupilot", "companion-computer", "fleet-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymavlink>=2.4.41",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "paho-mqtt>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "websockets>=12.0",
    "structlog>=24.0.0",
    "pyserial>=3.5",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "zeroconf>=0.131.0",
    "jinja2>=3.0.0",
    # Required at runtime by ados.api.routes.plugins, which declares a
    # Form(...) parameter for the .adosplug upload endpoint. FastAPI
    # raises at module import time if this is missing.
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "msgpack>=1.0.0",
]
# Ground-station profile extras. Pulled only when the installer detects
# the ground_station profile or when a developer runs
# `pip install -e ".[ground-station]"`. The drone profile never needs these.
ground-station = [
    "gpiozero>=2.0",
    "dbus-next>=0.2.3",
    "smbus2>=0.4.3",
    "evdev>=1.6.1",
    # Pillow is used by the video local-tap, which decodes the keyframe
    # JPEG snapshot the GCS preview reads. Pinned explicitly so the
    # dependency graph stays stable across the ground-station extra.
    "Pillow>=10.0.0",
]
# Tooling extras for refreshing build-time generated assets such as the
# rasterized LCD tab-bar icons. Not required at runtime; only needed
# when an editor wants to re-run `scripts/render-lcd-icons.py` after an
# SVG edit. CairoSVG ships its own libcairo build via pycairo, so this
# stays out of the base install footprint.
icon-tools = [
    "cairosvg>=2.7",
]
# Vision inference extras. The RKNN and TensorRT inference sidecars
# import numpy lazily on the real infer path; pulled only when a
# vision-capable build needs on-device detection. Kept out of the base
# and drone installs so the default footprint stays small.
vision = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://altnautica.com/drone-agent"
Repository = "https://github.com/altnautica/ADOSDroneAgent"
Documentation = "https://docs.altnautica.com/drone-agent"
Issues = "https://github.com/altnautica/ADOSDroneAgent/issues"

[project.scripts]
ados = "ados.cli.main:cli"
ados-agent = "ados.core.main:main"
ados-plugin-runner = "ados.plugins.runner:main"

[project.entry-points."ados.plugins"]
geofence = "ados.plugins.builtin.geofence"
telemetry-logger = "ados.plugins.builtin.telemetry_logger"
mavlink-inspector = "ados.plugins.builtin.mavlink_inspector"

# Peripheral Manager plugin group. External OEM partners contribute
# manifests via entry points or filesystem drop-in.
[project.entry-points."ados.peripherals"]

[tool.setuptools.dynamic]
version = {attr = "ados.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ados*"]

[tool.setuptools.package-data]
"ados.hal" = ["boards/*.yaml"]
"ados.core" = ["defaults.yaml"]
"ados.dashboard" = ["static/**/*"]
"ados.data" = ["*.json"]


[tool.ruff]
target-version = "py311"
line-length = 100
# Generated by ados-capabilities-codegen from capabilities.toml; the catalog
# descriptions are long single-line strings that intentionally exceed the
# line-length limit. Edit the TOML and regenerate, never this file.
extend-exclude = ["src/ados/plugins/_capabilities_generated.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "UP017",  # datetime.UTC requires Python 3.12+, we target 3.11
    "E501",   # line-too-long: line length is left to the formatter, not the linter
    "E402",   # module-import-not-at-top: several modules import after a re-export
              # loop or doc block on purpose (e.g. ground_station package router
              # aggregation, plugins.supervisor circular-import guard)
    "N818",   # exception names without an Error suffix are part of the public API
              # (CmdTimeout, CapabilityDenied, TokenInvalid, ...); renaming breaks callers
    "N806",   # uppercase locals are deliberate function-scoped constants (SLEEP_S, ...)
    "N805",   # first-arg name: inner helper classes use _self to avoid shadowing self
    "N802",   # function name casing: a few test helper factories use PascalCase on purpose
    "N814",   # camelcase-imported-as-constant: intentional short aliases (Path as _P)
    "N815",   # mixed-case class attrs map to serialized wire field names (lastModified)
    "UP042",  # replace-str-enum: str-enum modernization deferred (behavior-sensitive)
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
