[workspace]
resolver = "2"
members = ["ados-protocol", "ados-capabilities-codegen", "ados-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/altnautica/ADOSDroneAgent"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
getrandom = "0.2"
toml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
# HTTP-only (no TLS): the REST client targets the agent on localhost:8080.
ureq = { version = "2", default-features = false, features = ["json"] }
# TUI. ratatui re-exports a matching crossterm, so the binary uses
# `ratatui::crossterm` rather than a separately versioned crossterm dependency.
ratatui = "0.29"
anyhow = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
