[workspace]
resolver = "2"
members = ["ados-protocol", "ados-capabilities-codegen", "ados-tui", "ados-supervisor", "ados-mavlink-router", "ados-radio", "ados-video", "ados-plugin-host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/altnautica/ADOSDroneAgent"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
hmac = "0.12"
sha2 = "0.10"
# blake2b-8 → the 16-hex WFB key fingerprint (peer-public-half digest).
blake2 = "0.10"
hex = "0.4"
thiserror = "2"
getrandom = "0.2"
toml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "signal", "fs"] }
# HTTP-only (no TLS): the REST client targets the agent on localhost:8080.
ureq = { version = "2", default-features = false, features = ["json"] }
# TUI. ratatui re-exports a matching crossterm, so the binary uses
# `ratatui::crossterm` rather than a separately versioned crossterm dependency.
ratatui = "0.29"
anyhow = "1"
# YAML config reader (/etc/ados/config.yaml + profile.conf). serde_yaml is
# archived and serde_yml has an outstanding advisory; serde_norway is the
# maintained pick.
serde_norway = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Linux-only deps (systemd notify + journald). Declared here; the consuming
# crate pulls them in only under `[target.'cfg(target_os = "linux")'.dependencies]`
# so the pure-logic core still builds and tests on a non-Linux host.
sd-notify = "0.4"
tracing-journald = "0.3"
# Unix process-group management (setsid + killpg) — the structural fix for
# the orphaned-wfb_tx bug class. Linux-only; consuming crates target-gate it.
nix = { version = "0.29", default-features = false, features = ["process", "signal", "fs", "user"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
