[workspace]
members = [
    "crates/ados-agent-lite",
    "crates/ados-mavlink",
    "crates/ados-cloud",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Altnautica"]
repository = "https://github.com/altnautica/ADOSDroneAgent"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime — single-thread current_thread flavor for low-RAM targets
tokio = { version = "1", features = ["macros", "rt", "sync", "io-util", "net", "time", "signal", "process"] }
tokio-util = "0.7"
tokio-serial = "5.4"

# HTTP + WebSocket. axum 0.7 dropped the legacy "tokio" feature; "http1",
# "json", and "ws" are the right baseline.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "ws"] }
tokio-tungstenite = "0.21"

# MQTT + TLS — rumqttc with rustls (no openssl-sys; openssl is broken on
# armv7-musleabihf). The TLS stack comes transitively from rumqttc and
# reqwest; we do not pin a direct rustls version here to avoid duplicate
# resolutions across the dep tree. Add a direct dep when a crate
# constructs ClientConfig itself.
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# MAVLink dialect codegen — added when the router needs typed message
# helpers. The current router parses raw v2 frames byte-for-byte and
# fans them out as opaque blobs, so no dialect is linked. Reintroduce
# with a narrow feature set when typed decoding is needed.
# mavlink = { version = "0.13", default-features = false, features = ["std", "ardupilotmega"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
