[workspace]
members = [
    "crates/ados-agent-lite",
    "crates/ados-core",
    "crates/ados-mavlink",
    "crates/ados-cloud",
    "crates/ados-setup",
    "crates/ados-test-mocks",
    "crates/ados-video",
    "crates/ados-wfb",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Altnautica"]
repository = "https://github.com/altnautica/ADOSDroneAgent"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime — single-thread current_thread flavor for low-RAM targets
tokio = { version = "1", features = ["macros", "rt", "sync", "io-util", "net", "time", "signal", "process"] }
tokio-util = "0.7"
tokio-serial = "5.4"

# HTTP + WebSocket. axum 0.7 dropped the legacy "tokio" feature; "http1",
# "json", and "ws" are the right baseline.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "ws"] }
tokio-tungstenite = "0.21"

# MQTT + TLS — rumqttc with rustls (no openssl-sys; openssl is broken on
# armv7-musleabihf). The TLS stack comes transitively from rumqttc and
# reqwest; we do not pin a direct rustls version here to avoid duplicate
# resolutions across the dep tree. Add a direct dep when a crate
# constructs ClientConfig itself.
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# MAVLink dialect codegen — added when the router needs typed message
# helpers. The current router parses raw v2 frames byte-for-byte and
# fans them out as opaque blobs, so no dialect is linked. Reintroduce
# with a narrow feature set when typed decoding is needed.
# mavlink = { version = "0.13", default-features = false, features = ["std", "ardupilotmega"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Async trait dispatch — used by the encoder backends in `ados-video`
# so the trait surface is `Send`-friendly across `await` points without
# the boilerplate that `impl Trait` in trait methods would require.
async-trait = "0.1"

# Length-prefixed msgpack framing on the rkmpi subprocess channel. The
# C wrapper produces the same wire format so the parent and child speak
# a stable format independent of the host libc.
rmp-serde = "1.3"

# V4L2 hardware encoder bindings for the Pi-class V4L2 backend. Safe
# wrapper around the kernel ioctls that runs the encoder loop without
# the agent crate dropping its `forbid(unsafe_code)` posture.
v4l = "0.14"

# Byte buffer helpers for the RTSP push module. `Bytes` and `BytesMut`
# avoid copying frame payloads as they hop from the encoder mpsc to the
# RTP packetizer to the TCP write half.
bytes = "1"

# System metrics (cpu, memory, temperature) for the heartbeat
# enrichment. Cross-platform; reads /proc on Linux, sysctl on macOS.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Curve25519 scalar arithmetic for the WFB-ng broadcast key derivation
# in `ados-wfb`. The `static_secrets` feature exposes `StaticSecret` so
# the crate can derive from a deterministic scalar (the SHA-256 of an
# operator passphrase) rather than only the ephemeral path the default
# feature set offers.
x25519-dalek = { version = "2", features = ["static_secrets"] }

# AEAD that wraps the wfb-ng broadcast payload between the air-side
# encoder and any ground-side decoder seeded with the same key. Same
# crate `ados-wfb` exports.
chacha20poly1305 = "0.10"

# SHA-256 — already used by `ados-cloud` for cloudflared release-asset
# verification; promoted to the workspace so `ados-wfb`'s key-derivation
# layer pins the same version.
sha2 = "0.10"

# Residual rustls-webpki 0.102.8 advisory chain
# ---------------------------------------------
# `cargo audit` reports four advisories against rustls-webpki 0.102.8
# (RUSTSEC-2026-0049 / 0098 / 0099 / 0104) plus an unmaintained warning
# on rustls-pemfile 2.2.0 (RUSTSEC-2025-0134). All five trace through
# `rumqttc 0.25.1`, which carries direct deps pinned to those exact
# versions.
#
# **The actual TLS verification path is NOT vulnerable.** Real cert /
# CRL / name-constraint validation runs through `tokio-rustls 0.26 ->
# rustls 0.23 -> rustls-webpki 0.103.13` (the patched line). The
# 0.102.8 copy is in the binary because rumqttc's `tls.rs` declares a
# `WebPki(#[from] webpki::Error)` Error variant gated on
# `use-rustls-no-provider`; that variant is never constructed at
# runtime (errors surface as `rustls::Error`), but the type re-export
# alone is enough for cargo's resolver to keep the crate.
#
# A `[patch.crates-io]` redirect to 0.103 was attempted and rejected
# by the resolver: rumqttc's `^0.102.8` semver constraint cannot be
# satisfied by any 0.103.x version, and there is no 0.102.x backport
# release that carries the fixes. The clean fix lands when rumqttc
# bumps its rustls-webpki dep upstream (tracked at
# https://github.com/bytebeamio/rumqttc — wave at the `[Security]`
# section in `agents/lite-rs/CHANGELOG.md` for the residual).
#
# Do not enable a partial fix that would either downgrade rumqttc
# or disable TLS — this constraint is non-negotiable.

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
