[package]
name = "ados-capabilities-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generates the ADOS capability catalog (Python, Rust, TypeScript) from a single capabilities.toml source of truth."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
